[package]
name = "uwcwatcher-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.23.5"
winapi = "0.3.9"
winapi-util = "0.1"
ntapi = "0.3.7"
inputbot = "0.5.1"
num_cpus = "1.13.1"
promptly = "0.3.0"
colored = "2"